--- a/2.html
+++ b/2.html
@@ -4,7 +4,12 @@
 <meta charset="utf-8">
 <title> 연습 </title>
 </head>
-
+ <style>
+   a{ 
+     color:black;
+     text-decoration: none;
+   }
+  </style>
 <body>
   <h1><a href="index.html"> 홈 </a></h1>
 <ol><h2>
@@ -14,6 +19,7 @@
 </h2></ol>
 <p style ="margin-top:10px;">
  <img src ="바코.jpg" style width="30%">
+ <img src ="Toad.jpg" style width="30%">
 
 </body>
 </html>
