--- a/3.html
+++ b/3.html
@@ -4,7 +4,12 @@
 <meta charset="utf-8">
 <title> 연습 </title>
 </head>
-
+ <style>
+   a{ 
+     color:black;
+     text-decoration: none;
+   }
+  </style>
 <body>
   <h1><a href="index.html"> 홈 </a></h1>
 <ol><h2>
