--- a/3.html
+++ b/3.html
@@ -20,9 +20,11 @@
   <li><a href="1.html">음식 사진</a></li>
   <li><a href="2.html">동물 사진</a></li>
   <li><a href="3.html">애니 사진</a></li>
+
 </h2></ol>
 <img src="hyn.jpg" style width="20%">
 <img src="ani.jpg" style width="20%">
 <img src="에키드나.jpg" style width="30%">
+ <img src="우마무.jpg" style width="30%">
 </body>
 </html>
