--- a/1.html
+++ b/1.html
@@ -22,6 +22,7 @@
   <li><a href="3.html">애니 사진</a></li>
 </h2></ol>
 <img src="tako.jpg" style width="30%">
-
+background-image :url('background.jpg');
+ background-regeat: no-repeat;
 </body>
 </html>
