--- a/2.html
+++ b/2.html
@@ -24,6 +24,7 @@
 <p style ="margin-top:10px;">
  <img src ="바코.jpg" style width="20%">
  <img src ="Toad.jpg" style width="20%">
-
+background-image :url('background.jpg');
+ background-regeat: no-repeat;
 </body>
 </html>
