--- a/3.html
+++ b/3.html
@@ -26,5 +26,7 @@
 <img src="ani.jpg" style width="20%">
 <img src="에키드나.jpg" style width="30%">
  <img src="우마무.jpg" style width="30%">
+ background-image :url('background.jpg');
+ background-regeat: no-repeat;
 </body>
 </html>
