--- a/1.html
+++ b/1.html
@@ -24,5 +24,6 @@
 <img src="tako.jpg" style width="30%">
 background-image :url('background.jpg');
  background-regeat: no-repeat;
+ background-size: cover;
 </body>
 </html>
