--- a/2.html
+++ b/2.html
@@ -26,5 +26,6 @@
  <img src ="Toad.jpg" style width="20%">
 background-image :url('background.jpg');
  background-regeat: no-repeat;
+  background-size: cover;
 </body>
 </html>
