--- a/3.html
+++ b/3.html
@@ -28,5 +28,6 @@
  <img src="우마무.jpg" style width="30%">
  background-image :url('background.jpg');
  background-regeat: no-repeat;
+  background-size: cover;
 </body>
 </html>
