--- a/1.html
+++ b/1.html
@@ -5,6 +5,11 @@
 <title> 연습 </title>
 </head>
  <style>
+  <body{
+   background-image :url('background.jpg');
+ background-regeat: no-repeat;
+ background-size: cover;
+  }
    a{ 
      color:black;
      text-decoration: none;
@@ -22,8 +27,5 @@
   <li><a href="3.html">애니 사진</a></li>
 </h2></ol>
 <img src="tako.jpg" style width="30%">
-background-image :url('background.jpg');
- background-regeat: no-repeat;
- background-size: cover;
 </body>
 </html>
