--- a/2.html
+++ b/2.html
@@ -5,6 +5,11 @@
 <title> 연습 </title>
 </head>
  <style>
+   <body{
+   background-image :url('background.jpg');
+ background-regeat: no-repeat;
+ background-size: cover;
+  }
    a{ 
      color:black;
      text-decoration: none;
@@ -24,8 +29,5 @@
 <p style ="margin-top:10px;">
  <img src ="바코.jpg" style width="20%">
  <img src ="Toad.jpg" style width="20%">
-background-image :url('background.jpg');
- background-regeat: no-repeat;
-  background-size: cover;
 </body>
 </html>
