--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 <title> 연습 </title>
 </head>
  <style>
+   <body{
+   background-image :url('background.jpg');
+ background-regeat: no-repeat;
+ background-size: cover;
+  }
    a{ 
      color:black;
      text-decoration: none;
