--- a/1.html
+++ b/1.html
@@ -6,7 +6,7 @@
 </head>
  <style>
   <body{
-   background-image :url('https://discord.com/channels/881501646377594882/881501647048687668/891674358660100158.jpg');
+   background-image :url('https://cdn.pixabay.com/photo/2019/08/19/15/13/eiffel-tower-4416700__340.jpg');
  background-regeat: no-repeat;
  background-size: cover;
   }
