--- a/1.html
+++ b/1.html
@@ -6,7 +6,7 @@
 </head>
  <style>
   <body{
-   background-image :url('https://cdn.pixabay.com/photo/2019/08/19/15/13/eiffel-tower-4416700__340.jpg');
+   background-image :url('file:///D:/%EB%8B%A4%EC%9A%B4%EB%A1%9C%EB%93%9C/background.jpg');
  background-regeat: no-repeat;
  background-size: cover;
   }
