--- a/1.html
+++ b/1.html
@@ -5,7 +5,7 @@
 <title> 연습 </title>
 </head>
  <style>
- <body {
+ body {
  background-image: url("file:///D:/%EB%8B%A4%EC%9A%B4%EB%A1%9C%EB%93%9C/background.jpg");
  background-regeat: no-repeat;
  background-size: cover;
