--- a/1.html
+++ b/1.html
@@ -6,7 +6,7 @@
 </head>
  <style>
  body {
- background-image: url("background(1).jpg");
+ background-image: url("background.jpg");
  background-repeat: no-repeat;
  background-size: cover;
   }
