--- a/1.html
+++ b/1.html
@@ -9,6 +9,7 @@
  background-image: url("background.jpg");
  background-repeat: no-repeat;
  background-size: cover;
+  width: 100%;
   }
    a{ 
      color:black;
