--- a/1.html
+++ b/1.html
@@ -10,6 +10,8 @@
  background-repeat: no-repeat;
  background-size: cover;
   width: 100%;
+  height: 0;
+  padding-top: 66.64%;
   }
    a{ 
      color:black;
