--- a/1.html
+++ b/1.html
@@ -9,6 +9,9 @@
  background-image: url("background.jpg");
  background-repeat: no-repeat;
  background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
   }
    a{ 
      color:black;
