--- a/1.html
+++ b/1.html
@@ -6,6 +6,7 @@
 </head>
  <style>
  body {
+ background-color= black;
  background-image: url("background.jpg");
  background-repeat: no-repeat;
  background-size: cover;
