--- a/1.html
+++ b/1.html
@@ -10,6 +10,7 @@
  background-image: url("background.jpg");
  background-repeat: no-repeat;
  background-size: cover;
+ background: fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
