--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
 </head>
  <style>
    <body{
-   background-image :url('background.jpg');
- background-regeat: no-repeat;
+ background-color: black;
+ background-image: url("background.jpg");
+ background-repeat: no-repeat;
  background-size: cover;
+ background: fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
   }
    a{ 
      color:black;
