--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title> 연습 </title>
 </head>
  <style>
-   <body{
+  body{
  background-color: black;
  background-image: url("background.jpg");
  background-repeat: no-repeat;
