--- a/3.html
+++ b/3.html
@@ -5,7 +5,7 @@
 <title> 연습 </title>
 </head>
  <style>
-   <body{
+   body{
    background-image :url('background.jpg');
  background-regeat: no-repeat;
  background-size: cover;
