--- a/1.html
+++ b/1.html
@@ -5,8 +5,9 @@
 <title> 연습 </title>
 </head>
  <style>
- body {
+ body{
  background-color: black;
+ background-image: url("background.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  background: fixed;
