--- a/3.html
+++ b/3.html
@@ -5,10 +5,15 @@
 <title> 연습 </title>
 </head>
  <style>
-   body{
-   background-image :url('background.jpg');
- background-regeat: no-repeat;
+ body{
+ background-color: black;
+ background-image: url("background.jpg");
+ background-repeat: no-repeat;
  background-size: cover;
+ background: fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
   }
    a{ 
      color:black;
