--- a/1.html
+++ b/1.html
@@ -1,35 +1,50 @@
 <!DOCTYPE html>
 <html>
 <head>
+
 <meta charset="utf-8">
 <title> 연습 </title>
 </head>
- <style>
- body{
- background-color: black;
+<style>
+@font-face {
+    font-family: 'MaplestoryOTFBold';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/MaplestoryOTFBold.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+#grid{
+  border:1px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  font-size: 30px;
+  font-family: 'MaplestoryOTFBold';
+}
+@media(){
+
+}
+ body {
  background-image: url("background.jpg");
  background-repeat: no-repeat;
- background-size: cover;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
+  background-size: 1920px 1080px;
   }
-   a{ 
-     color:black;
-     text-decoration: none;
-   }
-  h1{
-   font-size:45px;
-   text-align: center;
-  }
-  </style>
+#home {font-size: 50px;}
+h1 {text-align: center;}
+a{
+  color:black;
+  text-decoration: none;
+  text-align: center;
+}
+
+</style>
 <body>
-<h1><a href="index.html"> 홈 </a></h1>
-<ol><h2>
-  <li><a href="1.html">음식 사진</a></li>
-  <li><a href="2.html">동물 사진</a></li>
-  <li><a href="3.html">애니 사진</a></li>
-</h2></ol>
+<h1><a href="index.html"id="home"> 홈 </a></h1>
+<div id="grid">
+  <a href="1.html">음식</a>
+  <a href="2.html">동물</a>
+  <a href="3.html">애니</a>
+</div>
+<div style="text-align : center;">
 <img src="tako.jpg" style width="30%">
+</div>
 </body>
 </html>
