--- a/1.html
+++ b/1.html
@@ -19,8 +19,8 @@
   font-size: 30px;
   font-family: 'MaplestoryOTFBold';
 }
-@media(){
-
+@media(max-width:2900px){
+ body{background-size: 2960px 1440px;}
 }
  body {
  background-image: url("background.jpg");
