--- a/1.html
+++ b/1.html
@@ -19,8 +19,8 @@
   font-size: 30px;
   font-family: 'MaplestoryOTFBold';
 }
-@media(max-width:1400px){
- body{background-size: 1440px 2960px;}
+@media(){
+ 
 }
  body {
  background-image: url("background.jpg");
