--- a/1.html
+++ b/1.html
@@ -23,14 +23,12 @@
  
 }
  body {
- background-image: url("background.jpg");
- background-repeat: no-repeat;
-  background-size: 1080px 1920px;
+ background-color: black;
   }
 #home {font-size: 50px;}
 h1 {text-align: center;}
 a{
-  color:black;
+  color:White;
   text-decoration: none;
   text-align: center;
 }
