--- a/Best.html
+++ b/Best.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta charset="utf-8">
-<title> 연습 </title>
+<title> 반곡고커뮤니티 </title>
 <link rel="stylesheet" href="Header.css">
 </head>
 <header>
