--- a/Event.html
+++ b/Event.html
@@ -16,7 +16,7 @@
   <a href="Text.html">게시글</a>
   <a href="data.html">자료방</a>
   <a href="Event.html"><ins>이벤트</ins></a>
-  <a href="my_pofile.html">내프로필</a>
+  <a href="my_pofile.html">프로필</a>
 
 </pre>
 <header>
