--- a/Text.html
+++ b/Text.html
@@ -17,7 +17,7 @@
   <a href="Text.html"><ins>게시글<ins></a>
   <a href="data.html">자료방</a>
   <a href="Event.html">이벤트</a>
-  <a href="my_pofile.html">내프로필</a>
+  <a href="my_pofile.html">프로필</a>
 </pre>
 </header>
 <body>
