--- a/my_pofile.html
+++ b/my_pofile.html
@@ -16,7 +16,7 @@
   <a href="Text.html">게시글</a>
   <a href="data.html">자료방</a>
   <a href="Event.html">이벤트</a>
-  <a href="my_pofile.html"><ins>내프로필</ins></a>
+  <a href="my_pofile.html"><ins>프로필</ins></a>
 </pre>
 <header>
 <body>
