--- a/Event.html
+++ b/Event.html
@@ -19,7 +19,7 @@
   <a href="my_pofile.html">프로필</a>
 
 </pre>
-<header>
+</header>
 <body>
 <div>
 <img style="text-align :;"src="tako.jpg" style width="30%">
