--- a/my_pofile.html
+++ b/my_pofile.html
@@ -18,7 +18,7 @@
   <a href="Event.html">이벤트</a>
   <a href="my_pofile.html"><ins>프로필</ins></a>
 </pre>
-<header>
+</header>
 <body>
 <div>
 <img style="text-align :;"src="tako.jpg" style width="30%">
