--- a/main.html
+++ b/main.html
@@ -2,6 +2,7 @@
 <html lang="ko">
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="user-scalable=no" />
 <title> 연습 </title>
 <link rel="stylesheet" href="asd.css">
 </head>
