--- a/Picture.html
+++ b/Picture.html
@@ -25,6 +25,17 @@
   <a href="Event.html"class="item">이벤트</a>
 </nav>
 </header>
+  <div class="image">
+<img src="PICTURE/1.jpg" width="200px" weight="200px">
+<img src="PICTURE/2.jpg" width="200px" weight="200px">
+<img src="PICTURE/3.jpg" width="200px" weight="200px">
+<img src="PICTURE/4.jpg" width="200px" weight="200px">
+<img src="PICTURE/5.jpg" width="200px" weight="200px">
+<img src="PICTURE/6.jpg" width="200px" weight="200px">
+<img src="PICTURE/7.jpg" width="200px" weight="200px">
+<img src="PICTURE/8.jpg" width="200px" weight="200px">
+<img src="PICTURE/9.jpg" width="200px" weight="200px">
+</div>
 </body>
 </html>
 
